# compiler-project

./: .gitmodules  Untitled Diagram.drawio
ast/include/ast/: node.hpp
backend/: CMakeLists.txt
backend/include/backend/optimizer/: optimizer_abstract_pass.hpp  optimizer_base_aggregator_pass.hpp  optimizer_base_pass.hpp  optimizer_branch_root_pass.hpp  optimizer_config.hpp  optimizer_context.hpp  optimizer_expression_passes.hpp  optimizer_function_pass.hpp  optimizer_pass_statistic.hpp  optimizer_passes_dict.hpp  optimizer_utils.hpp
backend/src/optimizer/: optimizer.cpp  optimizer_base_aggregator_pass.cpp  optimizer_base_pass.cpp  optimizer_branch_root_pass.cpp  optimizer_config.cpp  optimizer_expression_passes.cpp  optimizer_function_pass.cpp  optimizer_passes_dict.cpp  optimizer_utils.cpp
python_utils/: tree.json  tree.txt  tree_to_plantuml_json.py
tests/backend/: CMakeLists.txt  optimizer.cpp  parser.cpp
